# docker-project-templates

./: CHANGELOG.md  README.md  taskfile.yml
.github/workflows/: main.yml
templates/databases/mysql/: .env.example  docker-compose.yml  taskfile.yml
templates/databases/mysql/tasks/docker/: docker-taskfile_linux.yml  docker-taskfile_windows.yml
templates/databases/mysql/tools/: pma-docker-compose.yml
templates/python/native/: taskfile.yml
templates/python/native/py-native-pip/: .env.example  .gitignore  docker-compose.yml  taskfile.yml
templates/python/native/py-native-pip/resources/: main.py  requirements.txt
templates/python/native/py-native-poetry/: .dockerignore  docker-compose.yml  taskfile.yml
templates/python/native/py-native-poetry/resources/: pyproject.toml
